add. fix is not. finish

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   placeholder="Search for the location you want!"
                 />
 
-                <button class="hero-form__btn" type="button">
+                <button class="hero-form__btn" type="submit">
                   Search
                   <svg class="hero-form__svg">
                     <use href="./img/sprite/sprite.svg#icon-arrow-right"></use>
@@ -541,10 +541,7 @@
             <img class="partner__img partner__img--green" src="./img/partner-green.png" alt="png" />
             <div class="partner__content">
               <p class="partner__text">See tips and trick from our partnership</p>
-              <h2 class="partner__title">
-                Find out more about <br />
-                selling and buying homes
-              </h2>
+              <h2 class="partner__title">Find out more about selling and buying homes</h2>
               <button class="partner__btn" type="button">More Artikel</button>
             </div>
 
