add fix after review Kuhar

--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
           <form class="recommen-form">
               <ul class="recommen-list">
               <li class="recommen-list__item">
-                <label class="label-radiobtn" for="radio">
-                  <input class="label-radiobtn__input" type="radio" name="radio-btn" id="radio" />
+                <label class="label-radiobtn" for="radio1">
+                  <input class="label-radiobtn__input" type="radio" name="radio-btn" id="radio1" />
                   <span class="label-radiobtn__span">
                     <svg class="label-radiobtn__svg">
                       <use href="./img/sprite/sprite.svg#icon-recommen1"></use>
@@ -200,8 +200,8 @@
                 </label>
               </li>
               <li class="recommen-list__item">
-                <label class="label-radiobtn" for="radio">
-                  <input class="label-radiobtn__input" type="radio" name="radio-btn" id="radio" />
+                <label class="label-radiobtn" for="radio2">
+                  <input class="label-radiobtn__input" type="radio" name="radio-btn" id="radio2" />
                   <span class="label-radiobtn__span">
                     <svg class="label-radiobtn__svg">
                       <use href="./img/sprite/sprite.svg#icon-recommen2"></use>
@@ -211,8 +211,8 @@
                 </label>
               </li>
               <li class="recommen-list__item">
-                <label class="label-radiobtn" for="radio">
-                  <input class="label-radiobtn__input" type="radio" name="radio-btn" id="radio" />
+                <label class="label-radiobtn" for="radio3">
+                  <input class="label-radiobtn__input" type="radio" name="radio-btn" id="radio3" />
                   <span class="label-radiobtn__span">
                     <svg class="label-radiobtn__svg">
                       <use href="./img/sprite/sprite.svg#icon-recommen3"></use>
