add adaptive footer

--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
     </main>
 
     <!-- FOOTER -->
-    <!-- <section class="footer">
+    <section class="footer">
       <div class="container">
         <div class="footer__block">
           <img class="footer__img" src="./img/footer-blue.png" alt="png" />
@@ -849,7 +849,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <script src="./js/header-menu.js" type="module"></script>
     <script src="./js/burger-menu.js" type="module"></script>
