add adaptive subscribe

--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
       </section> -->
 
       <!-- SUBSCRIBE -->
-      <!-- <section class="subscribe">
+      <section class="subscribe">
         <div class="container">
           <div class="subscribe__block">
             <div class="subscribe-leftblock">
@@ -751,7 +751,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- FOOTER -->
