add adaptive   partnership

--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
       </section> -->
 
       <!-- PARTNER -->
-      <!-- <section class="partner">
+      <section class="partner">
         <div class="container">
           <div class="partner__position">
             <img class="partner__img" src="./img/partner-blue.png" alt="png" />
@@ -670,7 +670,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <!-- SUBSCRIBE -->
       <section class="subscribe">
