add adapive review

--- a/index.html
+++ b/index.html
@@ -449,9 +449,9 @@
       </section> -->
 
       <!-- REVIEW -->
-      <!-- <section class="review">
+      <section class="review">
         <div class="container">
-          <p class="review__text  gold-text">See Our Review</p>
+          <p class="review__text gold-text">See Our Review</p>
           <h2 class="review__title">What Our User Say About Us</h2>
 
           <ul class="review-list">
@@ -547,7 +547,7 @@
 
           <span class="review__span"></span>
         </div>
-      </section> -->
+      </section>
 
       <!-- PARTNER -->
       <section class="partner">
