add adaptive recommen

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       </section> -->
 
       <!-- RECOMMENDATION -->
-      <!-- <section class="recommen">
+      <section class="recommen">
         <div class="container">
           <p class="recommen__text gold-text">Our Recommendation</p>
 
@@ -347,14 +347,14 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- SELL -->
       <section class="sell">
         <div class="container">
           <div class="sell__position">
             <div class="sell-leftblock">
-              <p class="gold-text">Ready to Sell!</p>
+              <p class="gold-text gold-text--margin">Ready to Sell!</p>
               <h2 class="sell-leftblock__title">Let’s tour and see our house!</h2>
               <p class="sell-leftblock__under-text">
                 Houses recommended by our partners that have been curated to become the home of your
