add adaptive hero

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!-- MAIN -->
     <main>
       <!-- HERO -->
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container">
           <div class="hero__position">
             <div class="hero-leftblock">
@@ -185,7 +185,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <!-- RECOMMENDATION -->
       <section class="recommen">
