add  animation recommen

--- a/index.html
+++ b/index.html
@@ -855,5 +855,7 @@
 
     <script src="./js/header-menu.js" type="module"></script>
     <script src="./js/burger-menu.js" type="module"></script>
+     <script src="./js/scroll.js" type="module"></script>
+
   </body>
 </html>
