--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="header__position">
           <div class="header-flex">
-            <a href="#" class="header__link">
+            <a href="#" class="header__link" >
               <img src="./img/logo.svg" class="header__logo" alt="logo" />
               Hounter
             </a>
@@ -31,7 +31,7 @@
               </svg>
             </button>
 
-            <div class="menu-box" data-menu>
+            <div class="menu-box" data-menu > 
               <ul class="header-list">
                 <li class="header-list__item">
                   <a class="header-list__link" href="#">About Us</a>
@@ -76,7 +76,7 @@
       <section class="hero">
         <div class="container">
           <div class="hero__position">
-            <div class="hero-leftblock">
+            <div class="hero-leftblock" data-animation="left">
               <h1 class="hero-leftblock__title">
                 find the place to live <span class="hero-leftblock__span">your dreams</span> easily
                 here
@@ -128,7 +128,7 @@
               </ul>
             </div>
 
-            <div class="hero-rightblock">
+            <div class="hero-rightblock" data-animation="left">
               <img src="./img/hero.png" class="hero-rightblock__img" alt="hero" />
               <img src="./img/hero-line.png" class="hero-rightblock__img--line" alt="lines" />
               <ul class="rightblock-list">
@@ -190,13 +190,13 @@
       <!-- RECOMMENDATION -->
       <section class="recommen">
         <div class="container">
-          <p class="recommen__text gold-text">Our Recommendation</p>
+          <p class="recommen__text gold-text" data-animation="top">Our Recommendation</p>
 
           <div class="recommen__flex">
-            <h2 class="recommen__title">Featured House</h2>
+            <h2 class="recommen__title" data-animation="left">Featured House</h2>
 
           <form class="recommen-form">
-              <ul class="recommen-list">
+              <ul class="recommen-list" data-animation="top">
               <li class="recommen-list__item">
                 <label class="label-radiobtn" for="radio1">
                   <input class="label-radiobtn__input" type="radio" name="radio-btn" id="radio1" />
@@ -232,7 +232,7 @@
               </li>
             </ul>
 
-            <ul class="recommen-list-btn">
+            <ul class="recommen-list-btn" data-animation="left">
               <li class="recommen-list-btn__item">
                 <button class="recommen-list-btn__btn" type="button">
                   <svg class="recommen-list-btn__svg">
@@ -252,7 +252,7 @@
           </form>
 
           <ul class="recommen-card">
-            <li class="recommen-card__item">
+            <li class="recommen-card__item" data-animation="left">
               <div class="recommen-card__content">
                 <img src="./img/recommen-house1.jpg" class="recommen-card__img" alt="img" />
                 <div class="recommen-card-position recommen-card-position--one">
@@ -274,7 +274,7 @@
                 </div>
               </div>
             </li>
-            <li class="recommen-card__item">
+            <li class="recommen-card__item" data-animation="left">
               <div class="recommen-card__content">
                 <img src="./img/recommen-house2.jpg" class="recommen-card__img" alt="img" />
                 <div class="recommen-card-position recommen-card-position--two">
@@ -299,7 +299,7 @@
                 </div>
               </div>
             </li>
-            <li class="recommen-card__item">
+            <li class="recommen-card__item" data-animation="left">
               <div class="recommen-card__content">
                 <img src="./img/recommen-house3.jpg" class="recommen-card__img" alt="img" />
                 <div class="recommen-card-position recommen-card-position--three">
@@ -323,7 +323,7 @@
                 </div>
               </div>
             </li>
-            <li class="recommen-card__item">
+            <li class="recommen-card__item" data-animation="left">
               <div class="recommen-card__content">
                 <img src="./img/recommen-house4.jpg" class="recommen-card__img" alt="img" />
                 <div class="recommen-card-position recommen-card-position--four">
@@ -350,11 +350,11 @@
       </section>
 
       <!-- SELL -->
-      <section class="sell">
+      <section class="sell">    
         <div class="container">
           <div class="sell__position">
-            <div class="sell-leftblock">
-              <p class="gold-text gold-text--margin">Ready to Sell!</p>
+            <div class="sell-leftblock"data-animation="left">
+              <p class="gold-text gold-text--margin " >Ready to Sell!</p>
               <h2 class="sell-leftblock__title">Let’s tour and see our house!</h2>
               <p class="sell-leftblock__under-text">
                 Houses recommended by our partners that have been curated to become the home of your
@@ -412,7 +412,7 @@
               </div>
             </div>
 
-            <div class="sell-rightblock">
+            <div class="sell-rightblock" data-animation="left">
               <img
                 src="./img/sell-rightblock1.jpg"
                 class="sell-rightblock__img sell-rightblock__img--bed"
@@ -453,11 +453,11 @@
       <!-- REVIEW -->
       <section class="review">
         <div class="container">
-          <p class="review__text gold-text">See Our Review</p>
-          <h2 class="review__title">What Our User Say About Us</h2>
+          <p class="review__text gold-text" data-animation="top">See Our Review</p>
+          <h2 class="review__title" data-animation="top">What Our User Say About Us</h2>
 
           <ul class="review-list">
-            <li class="review-list__item">
+            <li class="review-list__item" data-animation="left">
               <img src="./img/review1.png" class="review-list__img" alt="img" />
               <div class="review-content">
                 <h3 class="review-content__title">My house sold out fast!</h3>
@@ -485,7 +485,7 @@
                 </div>
               </div>
             </li>
-            <li class="review-list__item">
+            <li class="review-list__item"data-animation="left">
               <img src="./img/review2.png" class="review-list__img" alt="img" />
               <div class="review-content">
                 <h3 class="review-content__title">
@@ -515,7 +515,7 @@
                 </div>
               </div>
             </li>
-            <li class="review-list__item">
+            <li class="review-list__item"data-animation="left">
               <img src="./img/review3.png" class="review-list__img" alt="img" />
               <div class="review-content">
                 <h3 class="review-content__title">
@@ -557,16 +557,16 @@
           <div class="partner__position">
             <img class="partner__img" src="./img/partner-blue.png" alt="png" />
             <img class="partner__img partner__img--green" src="./img/partner-green.png" alt="png" />
-            <div class="partner__content">
+            <div class="partner__content"  data-animation="top">
               <p class="partner__text gold-text">See tips and trick from our partnership</p>
               <h2 class="partner__title">Find out more about selling and buying homes</h2>
               <button class="partner__btn" type="button">More Artikel</button>
             </div>
 
             <div class="partner__flex">
-              <div class="partner-leftblock">
-                <ul class="partner-list">
-                  <li class="partner-list__item">
+              <div class="partner-leftblock" >
+                <ul class="partner-list" >
+                  <li class="partner-list__item"data-animation="left">
                     <div class="partner-content">
                       <img class="partner-content__img-first" src="./img/partner1.png" alt="png" />
 
@@ -591,7 +591,7 @@
                       </div>
                     </div>
                   </li>
-                  <li class="partner-list__item">
+                  <li class="partner-list__item"data-animation="left">
                     <div class="partner-content">
                       <img class="partner-content__img-first" src="./img/partner2.png" alt="png" />
 
@@ -617,7 +617,7 @@
                       </div>
                     </div>
                   </li>
-                  <li class="partner-list__item">
+                  <li class="partner-list__item"data-animation="left">
                     <div class="partner-content">
                       <img class="partner-content__img-first" src="./img/partner3.png" alt="png" />
 
@@ -646,7 +646,7 @@
                 </ul>
               </div>
 
-              <div class="partner-rightblock">
+              <div class="partner-rightblock"  data-animation="left">
                 <img class="partner-rightblock__img-first" src="./img/partner4.png" alt="png" />
 
                 <div class="partner-rightblock__name">
@@ -677,8 +677,8 @@
       <!-- SUBSCRIBE -->
       <section class="subscribe">
         <div class="container">
-          <div class="subscribe__block">
-            <div class="subscribe-leftblock">
+          <div class="subscribe__block" data-animation="opacity">
+            <div class="subscribe-leftblock" >
               <ul class="subscribe-leftblock__list">
                 <li class="subscribe-leftblock__item">
                   <img class="subscribe-leftblock__img" src="./img/subscribe1.png" alt="img" />
@@ -706,7 +706,7 @@
                 </li>
               </ul>
             </div>
-            <div class="subscribe-centerblock">
+            <div class="subscribe-centerblock" data-animation="top">
               <h2 class="subscribe-centerblock__title">
                 Subscribe For More Info and update from Hounter
               </h2>
@@ -723,7 +723,7 @@
                 <button class="subscribe-centerblock-form__btn" type="button">Subsribe Now</button>
               </form>
             </div>
-            <div class="subscribe-rightblock">
+            <div class="subscribe-rightblock" >
               <ul class="subscribe-rightblock__list">
                 <li class="subscribe-rightblock__item">
                   <img class="subscribe-rightblock__img" src="./img/subscribe3.png" alt="img" />
@@ -762,7 +762,7 @@
         <div class="footer__block">
           <img class="footer__img" src="./img/footer-blue.png" alt="png" />
           <img class="footer__img footer__img--green" src="./img/footer-green.png" alt="png" />
-          <div class="footer-leftblock">
+          <div class="footer-leftblock" data-animation="left">
             <a href="#" class="footer-leftblock__link">
               <img src="./img/logo.svg" class="footer-leftblock__logo" alt="logo" />
               Hounter
@@ -798,7 +798,7 @@
           </div>
           <div class="footer-rightblock">
             <ul class="footer-rightblock__list">
-              <li class="footer-rightblock__item">
+              <li class="footer-rightblock__item"  data-animation="top">
                 <p class="footer-rightblock__text">Property</p>
                 <ul class="footer-second-list">
                   <li class="footer-second-list__item">
@@ -812,7 +812,7 @@
                   </li>
                 </ul>
               </li>
-              <li class="footer-rightblock__item">
+              <li class="footer-rightblock__item"  data-animation="top">
                 <p class="footer-rightblock__text">Article</p>
                 <ul class="footer-second-list">
                   <li class="footer-second-list__item">
@@ -829,7 +829,7 @@
                   </li>
                 </ul>
               </li>
-              <li class="footer-rightblock__item">
+              <li class="footer-rightblock__item"  data-animation="top">
                 <p class="footer-rightblock__text">Contact</p>
                 <ul class="footer-second-list">
                   <li class="footer-second-list__item">
